added seal certifications images

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -53,6 +53,7 @@
         "statistics.paragraph2": "Hektar sauberes Land pro Jahr",
         "statistics.paragraph3": "Jährlich gerettete Bäume",
         "statistics.paragraph4": "Sauberes und trinkbares Wasser pro Jahr gespart",
+        "legislation.certifications.title": "Gesetzgebung & Zertifizierungen",
         "legislation.document1": "Umweltgenehmigung, ausgestellt von ANPM ALBA – 212/06.12.2010, gültig durch jährliche Inspektion",
         "legislation.document2": "Gemeinschaftslizenzen für den Transport von Abfällen"
     },
