--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,6 +53,7 @@
         "statistics.paragraph2": "Clean land hectares/year",
         "statistics.paragraph3": "Trees saved annually",
         "statistics.paragraph4": "Clean and potable water saved/year",
+        "legislation.certifications.title": "Legislation & Certifications",
         "legislation.document1": "Environmental Permit issued by ANPM ALBA – 212/06.12.2010, valid through annual inspection",
         "legislation.document2": "Community licenses for waste transportation"
     },
