--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -53,9 +53,9 @@
         "statistics.paragraph2": "Hectare de teren curat/an",
         "statistics.paragraph3": "Copaci salvați anual",
         "statistics.paragraph4": " apă rămasă curată și potabilă/an",
-        
+        "legislation.certifications.title": "Legislație & Certificări",
         "legislation.document1": " Autorizația de Mediu, emisă de ANPM ALBA – 212/06.12.2010, cu valabilitate prin viză anuală",
-        "legislation.document2": "  Licențe comunitare de transport deșeuri"
+        "legislation.document2": "Licențe comunitare de transport deșeuri"
     },
     "cookie": {
         "title": "Acest site web folosește cookie-uri",
